{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 811,
  "lineage": "1fe1038a-e5ce-28a6-01ec-6ddb5f3c26d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5d68488bca45a40",
            "association_id": "eipassoc-002645167d3132bbf",
            "domain": "vpc",
            "id": "eipalloc-0d5d68488bca45a40",
            "instance": "i-07b5416e8a4b9bd02",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0211357bc7546b183",
            "private_dns": "ip-172-31-30-243.ap-northeast-1.compute.internal",
            "private_ip": "172.31.30.243",
            "public_dns": "ec2-52-69-108-123.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.69.108.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hblab-test"
            },
            "tags_all": {
              "Name": "hblab-test"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:185886701365:security-group/sg-054fb5d15f16f573c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054fb5d15f16f573c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "185886701365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-055e455a5931b6e40"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:185886701365:security-group/sg-008920b9c161d7093",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008920b9c161d7093",
            "ingress": [
              {
                "cidr_blocks": [
                  "183.91.3.171/32",
                  "118.70.135.21/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054fb5d15f16f573c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054fb5d15f16f573c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "185886701365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-055e455a5931b6e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:loadbalancer/app/test-hblab/8f12adef776d4f9b",
            "arn_suffix": "app/test-hblab/8f12adef776d4f9b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-hblab-1543258129.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:loadbalancer/app/test-hblab/8f12adef776d4f9b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-hblab",
            "preserve_host_header": false,
            "security_groups": [
              "sg-054fb5d15f16f573c",
              "sg-0ee54f7948a734c18"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0186a7f4d48d55823"
              },
              {
                "subnet_id": "subnet-02d7298b72c287737"
              },
              {
                "subnet_id": "subnet-0579f21ba3dcae70c"
              }
            ],
            "subnets": [
              "subnet-0186a7f4d48d55823",
              "subnet-02d7298b72c287737",
              "subnet-0579f21ba3dcae70c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "test-hblab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-hblab"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-055e455a5931b6e40",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/d5fdb451cf51ba04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/d5fdb451cf51ba04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:loadbalancer/app/test-hblab/8f12adef776d4f9b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:185886701365:certificate/2600d11c-fa95-45b7-9aa6-f35e9de56126",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "\u003cbody\u003e\u003cdiv class=\"mainbox\"\u003e\u003cdiv class=\"msgr\"\u003e404\u003c/div\u003e\u003cdiv class=\"msg\"\u003eこのサイトにアクセスできません\u003c/div\u003e\u003c/div\u003e\u003c/body\u003e",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:loadbalancer/app/test-hblab/8f12adef776d4f9b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/c4b648636bac9d72",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "hblab-test.itoen-shinhaiku.jp"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/pmaitoen/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/c4b648636bac9d72",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2",
            "priority": 1,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "503"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/54491ad93c87a2fe",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/pmaitoen/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/54491ad93c87a2fe",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2",
            "priority": 2,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/b863308e186deb50",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "hblab-test.itoen-shinhaiku.jp"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/b863308e186deb50",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2",
            "priority": 3,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/163389c028f20c05",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "test.itoen-shinhaiku.jp"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener-rule/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2/163389c028f20c05",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:listener/app/test-hblab/8f12adef776d4f9b/f3a0fba25260b9b2",
            "priority": 4,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f",
            "arn_suffix": "targetgroup/hblab/1df211b4ae49a21f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hblab",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hblab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hblab"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-055e455a5931b6e40"
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_target",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f-20230908104859240700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:185886701365:targetgroup/hblab/1df211b4ae49a21f",
            "target_id": "i-07b5416e8a4b9bd02"
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:185886701365:security-group/sg-0ee54f7948a734c18",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ee54f7948a734c18",
            "ingress": [],
            "name": "test-hblab-20230908102512114300000001",
            "name_prefix": "test-hblab-",
            "owner_id": "185886701365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "test-hblab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-hblab"
            },
            "timeouts": null,
            "vpc_id": "vpc-055e455a5931b6e40"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d6bd9a28134d3b3",
            "arn": "arn:aws:ec2:ap-northeast-1:185886701365:instance/i-07b5416e8a4b9bd02",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd4657d03b5c492e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b5416e8a4b9bd02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-hblab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0211357bc7546b183",
            "private_dns": "ip-172-31-30-243.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.243",
            "public_dns": "ec2-52-69-108-123.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.69.108.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd4657d03b5c492e",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0579f21ba3dcae70c",
            "tags": {
              "Environment": "dev",
              "Name": "test-hblab",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-hblab",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "test-hblab"
            },
            "vpc_security_group_ids": [
              "sg-008920b9c161d7093"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.ec2_sg",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    }
  ]
}